--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "apexcharts": "^3.25.0",
     "next": "10.0.7",
     "next-absolute-url": "^1.2.2",
     "react": "17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
