--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "apexcharts": "^3.25.0",
     "next": "10.0.7",
     "next-absolute-url": "^1.2.2",
@@ -19,6 +20,10 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.7",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.2.2"
   }
 }
