--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-absolute-url": "^1.2.2",
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
+    "react-autobind": "^1.0.6",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
