--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "apexcharts": "^3.25.0",
     "next": "10.0.7",
     "next-absolute-url": "^1.2.2",
