--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.0.7",
     "next-absolute-url": "^1.2.2",
     "nprogress": "^0.2.0",
+    "particles-bg": "https://github.com/lindelof/particles-bg",
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-autobind": "^1.0.6",
