--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-absolute-url": "^1.2.2",
     "nprogress": "^0.2.0",
     "particles-bg": "^2.5.0",
+    "postcss-nested": "^5.0.5",
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-autobind": "^1.0.6",
