--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-autobind": "^1.0.6",
+    "react-d3-tree": "^2.0.1",
     "react-dom": "17.0.1",
     "react-flip-move": "^3.0.4",
     "sass": "^1.32.8"
