--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "apexcharts": "^3.25.0",
     "next": "10.0.7",
     "next-absolute-url": "^1.2.2",
@@ -20,7 +21,6 @@
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-autobind": "^1.0.6",
-    "react-d3-tree": "^2.0.1",
     "react-dom": "17.0.1",
     "react-flip-move": "^3.0.4",
     "sass": "^1.32.8"
