--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-autobind": "^1.0.6",
+    "react-device-detect": "^1.17.0",
     "react-dom": "17.0.1",
     "react-flip-move": "^3.0.4",
     "sass": "^1.32.8"
